fix: intro view on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -189,7 +189,7 @@ textarea::placeholder {
 
 .intro-wrapper {
   display: flex;
-  gap: 24px;
+  gap: 16px;
   flex-direction: column;
   max-width: 340px;
   text-align: left;
